test/files/neg/bug1838.scala
package test

class A {
  sealed class B
  sealed def f = 0
  sealed val v = 0
}
